2008-02-25  Murray Cumming  <murrayc@murrayc.com>

	* examples/custom_container/examplebox.c:
	* examples/custom_container/main.c:
	Improve the implementation, iterating over the children every time we 
	should relayout the children.
	But the position of the container itself always seems to be 0. Possibly 
	I do not understand allocation/position or both.

2008-02-25  Murray Cumming  <murrayc@murrayc.com>

	* configure.ac:
	* docs/tutorial/clutter-tut.xml:
	* docs/tutorial/figures/Makefile.am:
	* examples/custom_container/Makefile.am:
	* examples/custom_container/examplebox.c:
	* examples/custom_container/examplebox.h:
	* examples/custom_container/main.c: Very cut-down version of 
	the old ClutterHBox container. Needs more work to make it behave 
	properly and be easier to understand.

2008-02-22  Murray Cumming  <murrayc@murrayc.com>

	* configure.ac:
	* docs/tutorial/clutter-tut.xml:
	* docs/tutorial/figures/Makefile.am:
	* examples/Makefile.am:
	* examples/actor_group/: Added actors/containers sub-section, 
	mentioning ClutterGroup.

	* examples/custom_container/: Added placeholder for a custom 
	containers section and example.

2008-02-21  Murray Cumming  <murrayc@murrayc.com>

	* configure.ac: Depend on clutter-0.6 and clutter-gtk-0.6 instead 
	of the -0.5 APIs.

2008-02-21  Murray Cumming  <murrayc@murrayc.com>

	* configure.ac:
	* docs/tutorial/clutter-tut.xml:
	* docs/tutorial/figures/Makefile.am:
	* examples/Makefile.am:
	* examples/score/main.c: Added a Timelines/Score sub-section and 
	example. The example is quite stupid.

2008-02-20  Murray Cumming  <murrayc@murrayc.com>

	* examples/stage_widget/main.c: (main):
	Use gtk_widget_set_size_request(gtkclutterembed) instead of 
	clutter_actor_set_size(stage) because the latter is not supported 
	with GtkClutterEmbed.
	See http://bugzilla.openedhand.com/show_bug.cgi?id=740

2008-02-04  Murray Cumming  <murrayc@murrayc.com>

	* examples/actor_events/main.c: (on_stage_button_press),