@@ -1,4 +1,4 @@
-/* Copyright 2007 Openismus GmbH
+/* Copyright 2008 Openismus GmbH
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2
